# ti-vit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/ti_vit/: __init__.py  attention.py  common.py  export.py  mlp.py  model.py
